src/stages/snapshots/lumina2__stages__hir_builder__test__expr__assign_simple.snap
---
source: src/stages/hir_builder.rs
expression: builder.lower_assign(&assign)
---
Assign {
    variable: ExprId(
        0,
    ),
    value: ExprId(
        1,
    ),
}
