src/stages/snapshots/lumina2__stages__hir_builder__test__expr__binary_simple.snap
---
source: src/stages/hir_builder.rs
expression: builder.lower_binary(&binary)
---
Binary {
    lhs: ExprId(
        0,
    ),
    op: Plus(
        Plus,
    ),
    rhs: ExprId(
        1,
    ),
}
