src/stages/snapshots/lumina2__stages__hir_builder__test__expr__call_with_params.snap
---
source: src/stages/hir_builder.rs
expression: builder.lower_call(&call)
---
Call {
    callee: ExprId(
        0,
    ),
    arguments: [
        ExprId(
            1,
        ),
        ExprId(
            2,
        ),
    ],
}
