src/stages/snapshots/lumina2__stages__hir_builder__test__expr__if_else_if.snap
---
source: src/stages/hir_builder.rs
expression: builder.lower_if(&if_expr)
---
Switch {
    discriminator: ExprId(
        3,
    ),
    branches: [
        (
            Boolean(
                true,
            ),
            BlockId(
                1,
            ),
        ),
    ],
    default: Some(
        BlockId(
            2,
        ),
    ),
}
