src/stages/snapshots/lumina2__stages__hir_builder__test__expr__if_simple.snap
---
source: src/stages/hir_builder.rs
expression: builder.lower_if(&if_expr)
---
Switch {
    discriminator: ExprId(
        0,
    ),
    branches: [
        (
            Boolean(
                true,
            ),
            BlockId(
                0,
            ),
        ),
    ],
    default: None,
}
