src/stages/snapshots/lumina2__stages__hir_builder__test__expr__literal_boolean.snap
---
source: src/stages/hir_builder.rs
expression: builder.lower_literal(&literal)
---
Boolean(
    true,
)
