src/stages/snapshots/lumina2__stages__hir_builder__test__expr__literal_integer.snap
---
source: src/stages/hir_builder.rs
expression: builder.lower_literal(&literal)
---
Integer(
    123,
)
