src/stages/snapshots/lumina2__stages__hir_builder__test__expr__unary_simple.snap
---
source: src/stages/hir_builder.rs
expression: builder.lower_unary(&unary)
---
Unary {
    op: Negative(
        Minus,
    ),
    value: ExprId(
        0,
    ),
}
