src/stages/snapshots/lumina2__stages__hir_builder__test__expr__variable_simple.snap
---
source: src/stages/hir_builder.rs
expression: builder.lower_variable(&variable)
---
Variable {
    binding: BindingId(
        0,
    ),
}
